# llmfarm-pydantic

./: CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALLATION.md  README.md  SIMPLE_USAGE.md  URL_FIX_SUMMARY.md  app.py  bosch_llm_farm.py  debug_test.py  debug_test_final.py  debug_test_query.py  debug_test_url_fix.py  debug_test_v2.py  debug_test_v3.py  debug_test_v4.py  llm_farm_hybrid.py  pydantic-openai.md  pyproject.toml  requirement.md  requirements.txt  setup.py  simple_example.py  test.py  test_bosch_farm_simple.py  test_implementation.py  test_production.py  test_pydantic_ai.py
config/: .env.example  farm_config.json  farm_config.yaml
examples/: advanced_usage.py  basic_usage.py  config_file_example.py  working_basic_example.py
src/: __init__.py  bosch_farm_simple.py
src/config/: __init__.py  settings.py
src/providers/: __init__.py  bosch_farm.py
tests/: test_config.py  test_integration.py  test_provider.py
